--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
   <div class="bg-primary-light">
     <!-- e-store section -->
     <div id="e-store" class="bg-secondary" style="padding-block: 66px;">
-      <img src="assets/images/campina/parallax-1.png" alt="parallax 1" class="parallax-scroll position-absolute" data-speed=".3">
+      <img src="https://campina.jamalapriadi.com/storage/2023/09/1694281797.parallax_kiri_atas.png" alt="parallax 1" class="parallax-scroll position-absolute" data-speed=".4">
       <div class="store-wrapper">
         <div class="container">
           <div class="row">
@@ -383,7 +383,7 @@
     </div>
     <!-- products section -->
     <div id="products">
-      <img src="assets/images/campina/parallax-2.png" alt="parallax 2" class="parallax-scroll position-absolute end-0" data-speed=".3">
+      <img src="https://campina.jamalapriadi.com/storage/2023/09/1694282161.parallax_kanan_atas.png" alt="parallax 2" class="parallax-scroll position-absolute end-0" data-speed=".4">
       <div class="main">
         <h2 class="text-center text-white" style="margin-bottom: 44px; margin-inline: auto;">Our Product</h2>
     
@@ -611,7 +611,7 @@
   <!-- inside campina section -->
   <div class="bg-primary-light">
     <div id="inside-campina" class="position-relative">
-      <img src="assets/images/campina/parallax-5.png" alt="parallax 5" class="parallax-scroll position-absolute" data-speed=".12">
+      <img src="assets/images/campina/parallax-5.png" alt="parallax 5" class="parallax-scroll position-absolute" data-speed=".3">
       <div class="container">
         <div class="title d-flex justify-content-between align-items-lg-center">
           <h2 class="text-white d-lg-flex align-items-center">
@@ -664,7 +664,7 @@
   <!-- footer -->
   <div class="bg-dark position-relative">
     <div class="container-fluid">
-      <img src="assets/images/campina/parallax-6.png" alt="parallax 6" class="parallax-scroll position-absolute end-0" data-speed=".05">
+      <!-- <img src="assets/images/campina/parallax-6.png" alt="parallax 6" class="parallax-scroll position-absolute end-0" data-speed=".06"> -->
       <!-- footer top -->
       <div id="footer-top">
         <img src="assets/images/campina/logo-campina.png" height="88" alt="logo campina" class="mb-5">
