--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
   <div class="bg-secondary">
     <!-- fun creator section -->
     <div id="fun-creator" class="position-relative">
-      <img src="assets/images/campina/parallax-3.png" alt="parallax 3" class="parallax-scroll position-absolute" data-speed=".3">
+      <img src="https://campina.jamalapriadi.com/storage/2023/09/1694519432.parallax_kiri_bawah.png" alt="parallax 3" class="parallax-scroll position-absolute" data-speed=".3">
       <div class="product-tabs-content position-relative">
         <!-- Slider main container -->
         <div class="swiper-creator overflow-hidden">
