--- a/index.html
+++ b/index.html
@@ -615,11 +615,7 @@
       <div class="container">
         <div class="title d-flex justify-content-between align-items-lg-center">
           <h2 class="text-white d-lg-flex align-items-center">
-            Inside Campina
-            <div class="badge bg-blue ms-0 ms-lg-4 mt-2 mt-lg-0">
-              <img src="assets/images/campina/instagram.png" height="16" alt="instagram icons">
-              <p style="font-weight: 500; margin-left: 8px;">@lifeatcampina</p>
-            </div>
+            Life at Campina
           </h2>
           <a href="life-at-campina.html" style="font-weight: 600; z-index: 1;" class="text-white">Lihat Semua</a>
         </div>
