--- a/product.html
+++ b/product.html
@@ -349,6 +349,11 @@
               <img src="assets/images/campina/heart.png" alt="heart">
             </a>
           </div>
+          <div class="stick product-tabs-content-item position-relative col-lg-4 mb-5 d-flex justify-content-center align-items-center">
+            <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
+              <img src="assets/images/campina/bluk.svg" alt="bulk">
+            </a>
+          </div>
         </div>
       </div>
     </div>
