--- a/product.html
+++ b/product.html
@@ -293,6 +293,10 @@
         <div class="product-tabs-menu d-flex justify-content-center flex-wrap">
           <a href="javascript:;" class="active" data-type="all">All</a>
           <a href="javascript:;" data-type="stick">
+            <img src="assets/images/campina/bites.png" alt="bites" height="34" width="34">
+            Bites
+          </a>
+          <a href="javascript:;" data-type="stick">
             <img src="assets/images/campina/menu-stick.png" alt="menu stick" height="34" width="34">
             Stick
           </a>
@@ -347,11 +351,6 @@
           <div class="stick product-tabs-content-item position-relative col-lg-4 mb-5 d-flex justify-content-center align-items-center">
             <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
               <img src="assets/images/campina/heart.png" alt="heart">
-            </a>
-          </div>
-          <div class="stick product-tabs-content-item position-relative col-lg-4 mb-5 d-flex justify-content-center align-items-center">
-            <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
-              <img src="assets/images/campina/bluk.svg" alt="bulk">
             </a>
           </div>
         </div>
