add sejarah page & product name

--- a/sejarah.html
+++ b/sejarah.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>New Campina - Products</title>
+  <title>New Campina - Sejarah</title>
   <meta name="robots" content="noindex, follow" />
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -280,97 +280,67 @@
   <div class="menu-overlay"></div>
 
   <!-- page title section -->
-  <div class="page-title position-relative d-flex justify-content-center align-items-center blue-overlay">
-    <img src="assets/images/campina/bg-product.png" alt="background product">
+  <div class="page-title position-relative d-flex justify-content-center align-items-center gradient-overlay">
+    <img src="assets/images/campina/bg-kantor.png" alt="background life at campina">
     <div class="page-title-wrapper position-absolute container d-flex flex-column align-items-center justify-content-center">
-      <h1 class="text-white text-center">Product</h1>
+      <h1 class="text-white text-center">Sejarah</h1>
     </div>
   </div>
 
-  <div class="product-page-content">
+  <div class="life-at-campina-page-content pb-5">
     <div class="container">
-      <div class="product-tabs">
-        <div class="product-tabs-menu d-flex justify-content-center flex-wrap">
-          <a href="javascript:;" class="active" data-type="all">All</a>
-          <a href="javascript:;" data-type="stick">
-            <img src="assets/images/campina/bites.png" alt="bites" height="34" width="34">
-            Bites
-          </a>
-          <a href="javascript:;" data-type="stick">
-            <img src="assets/images/campina/menu-stick.png" alt="menu stick" height="34" width="34">
-            Stick
-          </a>
-          <a href="javascript:;" data-type="cup">
-            <img src="assets/images/campina/menu-cup.png" alt="menu cup" height="34" width="34">
-            Cup
-          </a>
-          <a href="javascript:;" data-type="cone">
-            <img src="assets/images/campina/menu-cone.png" alt="menu cone" height="34" width="34">
-            Cone
-          </a>
-          <a href="javascript:;" data-type="family-pack">
-            <img src="assets/images/campina/menu-family-pack.png" alt="menu family pack" height="34" width="34">
-            Family Pack
-          </a>
-          <a href="javascript:;" data-type="es-potong">
-            <img src="assets/images/campina/menu-es-potong.png" alt="menu es potong" height="34" width="34">
-            Es Potong
-          </a>
-          <a href="javascript:;" data-type="bulk">
-            <img src="assets/images/campina/menu-bulk.png" alt="menu bulk" height="34" width="34">
-            Bulk
-          </a>
-        </div>
-        <div class="product-tabs-content row">
-          <div class="col-lg-4 text-center mb-5">
-            <div class="bulk product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
-                <img src="assets/images/campina/neapolitan-box.png" alt="neapolitan box">
-              </a>
+      <div class="timeline position-relative">
+        <div class="timeline-item d-flex">
+          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1972</h4>
+          <div class="timeline-item-right position-relative">
+            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
+              <img src="./assets/images/campina/berdirinya-campina.png" alt="berdirinya campina" style="border-radius: 18px;">
+              <div class="ps-0 ps-lg-5">
+                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Berdirinya Campina</h2>
+                <p class="text-black" style="font-weight: 500; font-size: 14px;">Didirikan sebagai sebuah industri rumahan berbentuk Firma bernama CV Pranoto dengan merk dagang Campina. CV Pranoto ini didirikan oleh Darmo Hadipranoto pada tanggal 22 Juli 1972 di Jalan Gembong Sawah Surabaya, yang juga merupakan kediaman pribadi Darmo Hadipranot</p>
+              </div>
             </div>
-            <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Neapolitan</a></h4>
-          </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="es-potong product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
-                <img src="assets/images/campina/mochi.png" alt="mochi">
-              </a>
-            </div>
-            <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Mochi</a></h4>
-          </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="stick product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
-                <img src="assets/images/campina/heart.png" alt="heart">
-              </a>
-            </div>
-            <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Heart</a></h4>
-          </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="bulk product-bulk product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
-                <img src="assets/images/campina/neapolitan-box.png" alt="neapolitan box">
-              </a>
-            </div>
-            <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Neapolitan</a></h4>
-          </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="es-potong product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
-                <img src="assets/images/campina/mochi.png" alt="mochi">
-              </a>
-            </div>
-            <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Mochi</a></h4>
-          </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="stick product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
-                <img src="assets/images/campina/heart.png" alt="heart">
-              </a>
-            </div>
-            <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Heart</a></h4>
           </div>
         </div>
+        <div class="timeline-item d-flex">
+          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1982</h4>
+          <div class="timeline-item-right position-relative">
+            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
+              <img src="./assets/images/campina/pabrik-baru.png" alt="pabrik baru" style="border-radius: 18px;">
+              <div class="ps-0 ps-lg-5">
+                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Pabrik Baru</h2>
+                <p class="text-black" style="font-weight: 500; font-size: 14px;">Seiring perkembangan usaha yang semakin maju, Campina melakukan ekspansi dengan membuka Fasilitas Produksi di Kawasan SIER, Surabaya Jawa Timur pada Tahun 1982.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item d-flex">
+          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1994</h4>
+          <div class="timeline-item-right position-relative">
+            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
+              <img src="./assets/images/campina/transformasi.png" alt="transformasi" style="border-radius: 18px;">
+              <div class="ps-0 ps-lg-5">
+                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Transformasi</h2>
+                <p class="text-black" style="font-weight: 500; font-size: 14px;">Mengubah status perusahaan dari Firma (CV) menjadi Perseroan Terbatas (PT). Dengan nama PT Campina Ice Cream Industry.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item d-flex">
+          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">2009</h4>
+          <div class="timeline-item-right position-relative">
+            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
+              <img src="./assets/images/campina/green-company.png" alt="green company" style="border-radius: 18px;">
+              <div class="ps-0 ps-lg-5">
+                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Green Company</h2>
+                <p class="text-black" style="font-weight: 500; font-size: 14px;">Perseroan mulai fokus pada program-program pengurangan dampak pemanasan global.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <button class="btn btn-primary btn-md">Load More</button>
       </div>
     </div>
   </div>
@@ -514,35 +484,9 @@
 
   <!-- Main JS -->
   <script src="assets/js/main.js"></script>
-  
+
   <!-- custom -->
   <script src="assets/js/custom.js"></script>
-
-  <!-- swipper -->
-  <script>
-    const menus0 = document.querySelectorAll('.product-tabs-menu a')
-    const products0 = document.querySelectorAll('.product-tabs-content .product-tabs-content-item')
-
-    menus0.forEach(menu => {
-      menu.addEventListener('click', e => {
-        e.preventDefault()
-        const dataType = e.target.dataset.type
-
-        menus0.forEach(m => {
-          m.classList.remove('active')
-        })
-        e.target.classList.add('active')
-
-        products0.forEach(product => {
-          if (dataType === 'all') {
-            product.classList.remove('d-none')
-          } else {
-            product.classList.contains(dataType) ? product.classList.remove('d-none') : product.classList.add('d-none')
-          }
-        })
-      })
-    })
-  </script>
 
 </body>
 
