fix product hover animation

--- a/product.html
+++ b/product.html
@@ -322,50 +322,56 @@
           </a>
         </div>
         <div class="product-tabs-content row">
-          <div class="col-lg-4 text-center mb-5">
-            <div class="bulk product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
+          <div class="col-lg-4 single-product-02 text-center mb-5">
+            <div class="bulk product-images product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
+              <a href="product-detail.html">
                 <img src="assets/images/campina/neapolitan-box.png" alt="neapolitan box">
+                <img src="assets/images/campina/neapolitan-hover.png" class="product-hover-image" alt="product">
               </a>
             </div>
             <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Neapolitan</a></h4>
           </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="es-potong product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
+          <div class="col-lg-4 single-product-02 text-center mb-5">
+            <div class="es-potong product-images product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
+              <a href="product-detail.html">
                 <img src="assets/images/campina/mochi.png" alt="mochi">
+                <img src="assets/images/campina/mochi-hover.png" class="product-hover-image" alt="product">
               </a>
             </div>
             <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Mochi</a></h4>
           </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="stick product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
+          <div class="col-lg-4 single-product-02 text-center mb-5">
+            <div class="stick product-images product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
+              <a href="product-detail.html">
                 <img src="assets/images/campina/heart.png" alt="heart">
+                <img src="assets/images/campina/heart-hover.png" class="product-hover-image" alt="product">
               </a>
             </div>
             <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Heart</a></h4>
           </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="bulk product-bulk product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
+          <div class="col-lg-4 single-product-02 text-center mb-5">
+            <div class="bulk product-bulk product-images product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
+              <a href="product-detail.html">
                 <img src="assets/images/campina/neapolitan-box.png" alt="neapolitan box">
+                <img src="assets/images/campina/neapolitan-hover.png" class="product-hover-image" alt="product">
               </a>
             </div>
             <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Neapolitan</a></h4>
           </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="es-potong product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
+          <div class="col-lg-4 single-product-02 text-center mb-5">
+            <div class="es-potong product-images product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
+              <a href="product-detail.html">
                 <img src="assets/images/campina/mochi.png" alt="mochi">
+                <img src="assets/images/campina/mochi-hover.png" class="product-hover-image" alt="product">
               </a>
             </div>
             <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Mochi</a></h4>
           </div>
-          <div class="col-lg-4 text-center mb-5">
-            <div class="stick product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
-              <a href="product-detail.html" style="width: 100%; height: 100%; text-align: center;">
+          <div class="col-lg-4 single-product-02 text-center mb-5">
+            <div class="stick product-images product-tabs-content-item position-relative mb-5 d-flex flex-column justify-content-center align-items-center">
+              <a href="product-detail.html">
                 <img src="assets/images/campina/heart.png" alt="heart">
+                <img src="assets/images/campina/heart-hover.png" class="product-hover-image" alt="product">
               </a>
             </div>
             <h4 class="title"><a href="product-detail.html" class="text-black" style="font-size: 18px; font-weight: 900;">Heart</a></h4>
