--- a/sejarah.html
+++ b/sejarah.html
@@ -290,7 +290,7 @@
   <div class="life-at-campina-page-content pb-5">
     <div class="container">
       <div class="timeline position-relative">
-        <div class="timeline-item d-flex">
+        <div class="timeline-item">
           <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1972</h4>
           <div class="timeline-item-right position-relative">
             <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
@@ -302,7 +302,7 @@
             </div>
           </div>
         </div>
-        <div class="timeline-item d-flex">
+        <div class="timeline-item">
           <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1982</h4>
           <div class="timeline-item-right position-relative">
             <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
@@ -314,7 +314,7 @@
             </div>
           </div>
         </div>
-        <div class="timeline-item d-flex">
+        <div class="timeline-item">
           <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1994</h4>
           <div class="timeline-item-right position-relative">
             <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
@@ -326,7 +326,55 @@
             </div>
           </div>
         </div>
-        <div class="timeline-item d-flex">
+        <div class="timeline-item">
+          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">2009</h4>
+          <div class="timeline-item-right position-relative">
+            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
+              <img src="./assets/images/campina/green-company.png" alt="green company" style="border-radius: 18px;">
+              <div class="ps-0 ps-lg-5">
+                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Green Company</h2>
+                <p class="text-black" style="font-weight: 500; font-size: 14px;">Perseroan mulai fokus pada program-program pengurangan dampak pemanasan global.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1972</h4>
+          <div class="timeline-item-right position-relative">
+            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
+              <img src="./assets/images/campina/berdirinya-campina.png" alt="berdirinya campina" style="border-radius: 18px;">
+              <div class="ps-0 ps-lg-5">
+                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Berdirinya Campina</h2>
+                <p class="text-black" style="font-weight: 500; font-size: 14px;">Didirikan sebagai sebuah industri rumahan berbentuk Firma bernama CV Pranoto dengan merk dagang Campina. CV Pranoto ini didirikan oleh Darmo Hadipranoto pada tanggal 22 Juli 1972 di Jalan Gembong Sawah Surabaya, yang juga merupakan kediaman pribadi Darmo Hadipranot</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1982</h4>
+          <div class="timeline-item-right position-relative">
+            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
+              <img src="./assets/images/campina/pabrik-baru.png" alt="pabrik baru" style="border-radius: 18px;">
+              <div class="ps-0 ps-lg-5">
+                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Pabrik Baru</h2>
+                <p class="text-black" style="font-weight: 500; font-size: 14px;">Seiring perkembangan usaha yang semakin maju, Campina melakukan ekspansi dengan membuka Fasilitas Produksi di Kawasan SIER, Surabaya Jawa Timur pada Tahun 1982.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1994</h4>
+          <div class="timeline-item-right position-relative">
+            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
+              <img src="./assets/images/campina/transformasi.png" alt="transformasi" style="border-radius: 18px;">
+              <div class="ps-0 ps-lg-5">
+                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Transformasi</h2>
+                <p class="text-black" style="font-weight: 500; font-size: 14px;">Mengubah status perusahaan dari Firma (CV) menjadi Perseroan Terbatas (PT). Dengan nama PT Campina Ice Cream Industry.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item">
           <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">2009</h4>
           <div class="timeline-item-right position-relative">
             <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
@@ -340,7 +388,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center mb-5">
-        <button class="btn btn-primary btn-md">Load More</button>
+        <button class="btn btn-primary btn-md" id="loadMore">Load More</button>
       </div>
     </div>
   </div>
@@ -487,6 +535,17 @@
 
   <!-- custom -->
   <script src="assets/js/custom.js"></script>
+  
+  <script>
+    $(".timeline-item").slice(0, 4).addClass('d-flex');
+    $("#loadMore").on("click", function(e){  
+      e.preventDefault();  
+      $(".timeline-item:hidden").slice(0, 4).slideDown().addClass('d-flex');  
+      if ($(".timeline-item:hidden").length == 0) {  
+        $("#loadMore").hide();  
+      }  
+    });
+  </script>
 
 </body>
 
