add life at campina 2 page

--- a/life-at-campina-2.html
+++ b/life-at-campina-2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>New Campina - Sejarah</title>
+  <title>New Campina - Life at Campina</title>
   <meta name="robots" content="noindex, follow" />
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -280,116 +280,88 @@
   <div class="menu-overlay"></div>
 
   <!-- page title section -->
-  <div class="page-title position-relative d-flex justify-content-center align-items-center gradient-overlay">
-    <img src="assets/images/campina/bg-kantor.png" alt="background life at campina">
+  <div class="page-title position-relative d-flex justify-content-center align-items-center white-overlay">
+    <img src="assets/images/campina/bg-life-at-campina.png" alt="background life at campina">
     <div class="page-title-wrapper position-absolute container d-flex flex-column align-items-center justify-content-center">
-      <h1 class="text-white text-center">Sejarah</h1>
+      <h1 class="text-white text-center">Life at Campina</h1>
     </div>
   </div>
 
-  <div class="life-at-campina-page-content pb-5">
+  <div class="life-at-campina-page-content">
     <div class="container">
-      <div class="timeline position-relative">
-        <div class="timeline-item">
-          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1972</h4>
-          <div class="timeline-item-right position-relative">
-            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
-              <img src="assets/images/campina/berdirinya-campina.png" alt="berdirinya campina" style="border-radius: 18px;">
-              <div class="ps-0 ps-lg-5">
-                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Berdirinya Campina</h2>
-                <p class="text-black" style="font-weight: 500; font-size: 14px;">Didirikan sebagai sebuah industri rumahan berbentuk Firma bernama CV Pranoto dengan merk dagang Campina. CV Pranoto ini didirikan oleh Darmo Hadipranoto pada tanggal 22 Juli 1972 di Jalan Gembong Sawah Surabaya, yang juga merupakan kediaman pribadi Darmo Hadipranot</p>
-              </div>
-            </div>
-          </div>
+      <div class="row mb-5">
+        <div class="col-lg-6">
+          <h1 class="text-xl text-primary p-0" style="line-height: 84px;">Make Life Better</h1>
         </div>
-        <div class="timeline-item">
-          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1982</h4>
-          <div class="timeline-item-right position-relative">
-            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
-              <img src="assets/images/campina/pabrik-baru.png" alt="pabrik baru" style="border-radius: 18px;">
-              <div class="ps-0 ps-lg-5">
-                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Pabrik Baru</h2>
-                <p class="text-black" style="font-weight: 500; font-size: 14px;">Seiring perkembangan usaha yang semakin maju, Campina melakukan ekspansi dengan membuka Fasilitas Produksi di Kawasan SIER, Surabaya Jawa Timur pada Tahun 1982.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1994</h4>
-          <div class="timeline-item-right position-relative">
-            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
-              <img src="assets/images/campina/transformasi.png" alt="transformasi" style="border-radius: 18px;">
-              <div class="ps-0 ps-lg-5">
-                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Transformasi</h2>
-                <p class="text-black" style="font-weight: 500; font-size: 14px;">Mengubah status perusahaan dari Firma (CV) menjadi Perseroan Terbatas (PT). Dengan nama PT Campina Ice Cream Industry.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">2009</h4>
-          <div class="timeline-item-right position-relative">
-            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
-              <img src="assets/images/campina/green-company.png" alt="green company" style="border-radius: 18px;">
-              <div class="ps-0 ps-lg-5">
-                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Green Company</h2>
-                <p class="text-black" style="font-weight: 500; font-size: 14px;">Perseroan mulai fokus pada program-program pengurangan dampak pemanasan global.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1972</h4>
-          <div class="timeline-item-right position-relative">
-            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
-              <img src="assets/images/campina/berdirinya-campina.png" alt="berdirinya campina" style="border-radius: 18px;">
-              <div class="ps-0 ps-lg-5">
-                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Berdirinya Campina</h2>
-                <p class="text-black" style="font-weight: 500; font-size: 14px;">Didirikan sebagai sebuah industri rumahan berbentuk Firma bernama CV Pranoto dengan merk dagang Campina. CV Pranoto ini didirikan oleh Darmo Hadipranoto pada tanggal 22 Juli 1972 di Jalan Gembong Sawah Surabaya, yang juga merupakan kediaman pribadi Darmo Hadipranot</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1982</h4>
-          <div class="timeline-item-right position-relative">
-            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
-              <img src="assets/images/campina/pabrik-baru.png" alt="pabrik baru" style="border-radius: 18px;">
-              <div class="ps-0 ps-lg-5">
-                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Pabrik Baru</h2>
-                <p class="text-black" style="font-weight: 500; font-size: 14px;">Seiring perkembangan usaha yang semakin maju, Campina melakukan ekspansi dengan membuka Fasilitas Produksi di Kawasan SIER, Surabaya Jawa Timur pada Tahun 1982.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">1994</h4>
-          <div class="timeline-item-right position-relative">
-            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
-              <img src="assets/images/campina/transformasi.png" alt="transformasi" style="border-radius: 18px;">
-              <div class="ps-0 ps-lg-5">
-                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Transformasi</h2>
-                <p class="text-black" style="font-weight: 500; font-size: 14px;">Mengubah status perusahaan dari Firma (CV) menjadi Perseroan Terbatas (PT). Dengan nama PT Campina Ice Cream Industry.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <h4 class="timeline-item-left m-0" style="font-size: 28px; font-weight: 700;">2009</h4>
-          <div class="timeline-item-right position-relative">
-            <div class="d-flex flex-column flex-lg-row gap-5 align-items-center">
-              <img src="assets/images/campina/green-company.png" alt="green company" style="border-radius: 18px;">
-              <div class="ps-0 ps-lg-5">
-                <h2 class="page-content-title text-primary p-0" style="font-size: 28px; font-weight: 700;">Green Company</h2>
-                <p class="text-black" style="font-weight: 500; font-size: 14px;">Perseroan mulai fokus pada program-program pengurangan dampak pemanasan global.</p>
-              </div>
-            </div>
-          </div>
+        <div class="col-lg-6">
+          <h4 class="fs-5 text-black" style="font-weight: 400; line-height: 30px;">Unlock your full potential and gain new skills, but don’t forget to live your life to the fullest with Campina. Campina welcomes and celebrates every single person with professional support and perks to create a well-balanced life for all employees.</h4>
         </div>
       </div>
-      <div class="d-flex justify-content-center mb-5">
-        <button class="btn btn-primary btn-md" id="loadMore">Load More</button>
+      
+      <div class="py-5"></div>
+
+      <div class="image-showcase d-none d-lg-grid">
+        <div class="image-1"><img src="assets/images/campina/inside-campina-1.png" alt="image 1"></div>
+        <div class="image-2"><img src="assets/images/campina/inside-campina-3.png" alt="image 2"></div>
+        <div class="image-3"><img src="assets/images/campina/inside-campina-6.png" alt="image 3"></div>
+        <div class="image-4"><img src="assets/images/campina/inside-campina-4.png" alt="image 4"></div>
+        <div class="image-5"><img src="assets/images/campina/discuss.png" alt="image 5"></div>
+        <div class="image-6"><img src="assets/images/campina/inside-campina-5.png" alt="image 6"></div>
       </div>
+      <div class="image-showcase d-block d-lg-none">
+        <div class="row">
+          <div class="col-6 px-2 mb-3"><img src="assets/images/campina/inside-campina-1.png" alt="image 1"></div>
+          <div class="col-6 px-2 mb-3"><img src="assets/images/campina/inside-campina-3.png" alt="image 2"></div>
+          <div class="col-6 px-2 mb-3"><img src="assets/images/campina/inside-campina-6.png" alt="image 3"></div>
+          <div class="col-6 px-2 mb-3"><img src="assets/images/campina/inside-campina-4.png" alt="image 4"></div>
+          <div class="col-6 px-2 mb-3"><img src="assets/images/campina/discuss.png" alt="image 5"></div>
+          <div class="col-6 px-2 mb-3"><img src="assets/images/campina/inside-campina-5.png" alt="image 6"></div>
+        </div>
+      </div>
+      
+      <div class="py-5"></div>
+
+      <div class="position-relative mb-5">
+        <div class="row mb-5">
+          <div class="col-lg-6">
+            <h2 class="page-content-title text-primary p-0 mb-0" style="font-size: 28px; font-weight: 700;">LEVEL UP YOUR EXPERIENCE</h2>
+            <p class="text-black" style="font-weight: 400; font-size: 18px;">Get a glimpse of life at Traveloka, where you'll be a part of a global talent melting pot across different countries </p>
+          </div>
+        </div>
+        <div class="swiper overflow-hidden pt-5">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper align-items-center">
+            <!-- Slides -->
+            <div class="swiper-slide text-center">
+              <img src="assets/images/campina/discuss.png" height="275" width="434" alt="discuss" style="border-radius: 16px; object-fit: cover;">
+            </div>
+            <div class="swiper-slide text-center">
+              <img src="assets/images/campina/inside-campina-5.png" height="386" width="293" alt="discuss" style="border-radius: 16px; object-fit: cover;">
+            </div>
+            <div class="swiper-slide text-center">
+              <img src="assets/images/campina/inside-campina-6.png" height="275" width="434" alt="discuss" style="border-radius: 16px; object-fit: cover;">
+            </div>
+            <div class="swiper-slide text-center">
+              <img src="assets/images/campina/inside-campina-1.png" height="386" width="293" alt="discuss" style="border-radius: 16px; object-fit: cover;">
+            </div>
+          </div>
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev d-none d-lg-flex" style="background: #dadada; color: black; top: 100px; right: 70px; left: auto;"></div>
+          <div class="swiper-button-next d-none d-lg-flex" style="background: #dadada; color: black; top: 100px;"></div>
+        </div>
+      </div>
+
+      <div class="py-5"></div>
+
+      <div class="my-5 row align-items-center justify-content-center" style="border-radius: 20px; background: #E0BC1B; padding-block: 92px;">
+        <div class="col-6 text-center">
+          <p class="text-white mb-5" style="font-size: 28px; font-weight: 700; line-height: 44px;">We believe in your potential. This is the right time for you to step up your skills and discover endless possibilities.</p>
+          <button class="btn btn-primary btn-md">Start Your Journey</button>
+        </div>
+      </div>
+
+      <div class="py-5"></div>
+
     </div>
   </div>
 
@@ -537,13 +509,17 @@
   <script src="assets/js/custom.js"></script>
   
   <script>
-    $(".timeline-item").slice(0, 4).addClass('d-flex');
-    $("#loadMore").on("click", function(e){  
-      e.preventDefault();  
-      $(".timeline-item:hidden").slice(0, 4).slideDown().addClass('d-flex');  
-      if ($(".timeline-item:hidden").length == 0) {  
-        $("#loadMore").hide();  
-      }  
+    const swiper = new Swiper('.swiper', {
+      slidesPerView: 1,
+      breakpoints: {
+        640: {
+          slidesPerView: 3,
+        }
+      },
+      navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+      },
     });
   </script>
 
